--- a/thisgottawork/src/main/resources/application.properties
+++ b/thisgottawork/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.application.name=thisgottawork
 server.port=8081
+spring.datasource.url=jdbc:postgresql://localhost:5432/myHelloDatabase
+spring.datasource.username=postgres
+spring.datasource.password=password
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
